<resources>
    <string name="app_name">BeatMe</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_here_register">New Here? Register</string>
    <string name="register">Register</string>
    <string name="already_a_user_click_here">Already a user? Click Here</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_landing_page">landingPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="googlelogin">GoogleLogin</string>
    <string name="image">Image</string>
    <string name="beatme">BeatMe</string>
    <string name="beatme_gmail_com">beatme@gmail.com</string>
    <string name="matches">Matches</string>
    <string name="add_new_match">Add New Match</string>
    <string name="team1">Team1</string>
    <string name="team2">Team2</string>
    <string name="duration">Select Match Duration</string>
    <string name="add">Add</string>
    <string name="team_a_vs_team_b">Team A vs Team B</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="team_b">Team B</string>
    <string name="status">Status</string>
    <string name="x">X</string>
    <string name="by_user">By: User</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="plus1">+1</string>
    <string name="minus1">-1</string>
    <string name="plus2">+2</string>
    <string name="minus2">-2</string>
    <string name="minus5">-5</string>
    <string name="plus5">+5</string>
    <string name="tournaments">Tournaments</string>
    <string name="add_new_tournament">Add New Tournament</string>
    <string name="team1_vs_team2">team1 vs team2</string>
    <string name="default_user">default user</string>
    <string name="all_tournaments">All Tournaments</string>
    <string name="your_tournaments">Your Tournaments</string>
    <string name="all_matches">All Matches</string>
    <string name="your_matches">Your Matches</string>
    <string name="team_name">Team Name</string>
    <string name="add_team">Add Team</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="submit">Submit</string>
    <string name="random_shuffle">Random Shuffle</string>
</resources>