<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:id="@+id/match_view_close"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/match_view_label"
        android:backgroundTint="@color/black"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/match_view_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_a_vs_team_b"
        android:textSize="30sp"
        app:layout_constrainedWidth="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/match_view_timer"
        android:layout_marginTop="60dp"
        />
    <TextView
        android:id="@+id/match_view_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:text="@string/_00_00_00"
        android:textSize="35sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/match_view_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/match_view_horizontal_line"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/match_view_linear_Layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/match_view_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/match_view_horizontal_line"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="50dp">
        <TextView
            android:id="@+id/match_view_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_a"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/match_view_score_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            />
    </LinearLayout>

    <View
        android:id="@+id/match_view_horizontal_line"
        android:layout_width="2dp"
        android:layout_height="200dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_view_timer"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:id="@+id/match_view_linear_Layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/match_view_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/match_view_horizontal_line"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="50dp">
        <TextView
            android:id="@+id/match_view_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_b"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/match_view_score_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/match_view_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/match_view_horizontal_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/by_user"
        android:textSize="20sp"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/match_view_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/match_view_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/status"
        android:textSize="20sp"
        android:layout_margin="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>