<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/match_add_progress"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:indeterminate="true"
        android:visibility="invisible"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/match_view_team1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="40dp"
        android:hint="@string/team1"
        android:layout_gravity="center"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/match_view_team2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/team2"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:layout_gravity="center"/>
    <TimePicker
        android:id="@+id/match_duration"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:timePickerMode="spinner"
     />

    <Button
        android:id="@+id/match_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add"
        android:layout_gravity="center"/>

</LinearLayout>