<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constrainedWidth="true">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/match_update_progress"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:indicatorColor="@color/teal_700"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/match_update_close"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/x"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/match_update_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/match_update_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_a_vs_team_b"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/match_update_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/match_update_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/_00_00_00"
        android:textSize="35sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/match_update_horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/match_update_label" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/match_update_timer_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_update_timer"
        app:layout_constraintBottom_toTopOf="@id/match_update_horizontal_line"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/match_update_timer_play"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            app:icon="@drawable/ic_baseline_play_arrow_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/match_update_timer_pause"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/match_update_timer_pause"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            app:icon="@drawable/ic_baseline_pause_24"
            app:layout_constraintStart_toEndOf="@id/match_update_timer_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/match_update_linear_Layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/match_update_horizontal_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_update_timer_linearLayout">

        <TextView
            android:id="@+id/match_update_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_a"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/match_update_score_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/_0"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/match_update_score_team1_plus1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/plus1"
                android:layout_marginEnd="3dp"
                style="@style/Widget.AppCompat.ButtonBar"
                />
            <Button
                android:id="@+id/match_update_score_team1_minus1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                style="@style/Widget.AppCompat.ButtonBar"
                android:text="@string/minus1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/match_update_score_team1_plus2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/plus2"
                android:layout_marginEnd="3dp"
                style="@style/Widget.AppCompat.ButtonBar"/>
            <Button
                android:id="@+id/match_update_score_team1_minus2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/minus2"
                style="@style/Widget.AppCompat.ButtonBar"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/match_update_score_team1_plus5"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/plus5"
                android:layout_marginEnd="3dp"
                style="@style/Widget.AppCompat.ButtonBar"/>
            <Button
                android:id="@+id/match_update_score_team1_minus5"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/minus5"
                style="@style/Widget.AppCompat.ButtonBar"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/match_update_horizontal_line"
        android:layout_width="2dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_update_timer_linearLayout" />

    <LinearLayout
        android:id="@+id/match_update_linear_Layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/match_update_horizontal_line"
        app:layout_constraintTop_toBottomOf="@id/match_update_timer_linearLayout">

        <TextView
            android:id="@+id/match_update_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_b"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/match_update_score_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/_0"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/match_update_score_team2_plus1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/plus1"
                android:layout_marginEnd="3dp"
                style="@style/Widget.AppCompat.ButtonBar"
                />
            <Button
                android:id="@+id/match_update_score_team2_minus1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                style="@style/Widget.AppCompat.ButtonBar"
                android:text="@string/minus1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/match_update_score_team2_plus2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/plus2"
                android:layout_marginEnd="3dp"
                style="@style/Widget.AppCompat.ButtonBar"/>
            <Button
                android:id="@+id/match_update_score_team2_minus2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/minus2"
                style="@style/Widget.AppCompat.ButtonBar"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/match_update_score_team2_plus5"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/plus5"
                android:layout_marginEnd="3dp"
                style="@style/Widget.AppCompat.ButtonBar"/>
            <Button
                android:id="@+id/match_update_score_team2_minus5"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/minus5"
                style="@style/Widget.AppCompat.ButtonBar"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/match_update_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_update_horizontal_line"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>