<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/match_item"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:background="@drawable/button_background_blue">

    <TextView
        android:id="@+id/matchLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/team1_vs_team2"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/matchUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/default_user"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/matchStatus"
        android:maxLines="4"
        android:ellipsize="end"/>
    <TextView
        android:id="@+id/matchStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/matchUsername"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:maxLines="4"
        android:ellipsize="end"
        />



</androidx.constraintlayout.widget.ConstraintLayout>